src/objects/Vehicle_Relationship__c.object
<CustomObject>
    <fields>
        <fullName>MOT_Usage__c</fullName>
        <label>MOT Usage</label>
        <length>63</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOT_User_Address__c</fullName>
        <label>MOT User Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Magazine__c</fullName>
        <label>Magazine</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mail__c</fullName>
        <label>Mail</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Main_Driver__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Main Driver</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Main_Usage__c</fullName>
        <description>/* 
Created by: Amy Liang 
Used by: Vehicle Relationship 
Function: Main use of the vehicle
Used in: Pagelayouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/
Attribute in Data Dictionary object Vehicle Relationship is&quot;VehicleRel_MainUsage&quot;</description>
        <inlineHelpText>Main use of the vehicle</inlineHelpText>
        <label>Main Usage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Taxi</fullName>
                </value>
                <value>
                    <fullName>Hearse</fullName>
                </value>
                <value>
                    <fullName>Personal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>New_Used__c</fullName>
        <description>/* 
Created by: Amy Liang 
Used by: Vehicle Relationship
Function: Defines vehicle being new or used
Used in: Pagelayouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/
Attribute in Data Dictionary object Vehicle Relationship is &quot;VehicleRel_NewUsed&quot;</description>
        <inlineHelpText>Defines vehicle being new or used</inlineHelpText>
        <label>New Used</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Used</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Newspaper__c</fullName>
        <label>Newspaper</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Odometer_Reading__c</fullName>
        <label>Odometer Reading</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_Driver__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other Driver</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Owner_Dealer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>To indicates which dealer owns the vehicle relationship</description>
        <label>Owner Dealer</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Dealer</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Vehicle Relationship (Owner Dealer)</relationshipLabel>
        <relationshipName>Vehicle_Relationship</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Owner_Relation__c</fullName>
        <description>Person&apos;s relationship to the vehicle&apos;s owner</description>
        <label>Owner Relation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Same</fullName>
                    <default>true</default>
                    <label>Same</label>
                </value>
                <value>
                    <fullName>Parent</fullName>
                </value>
                <value>
                    <fullName>Child</fullName>
                </value>
                <value>
                    <fullName>Husband・Wife</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Grand parent</fullName>
                </value>
                <value>
                    <fullName>Grand child</fullName>
                </value>
                <value>
                    <fullName>Relative</fullName>
                </value>
                <value>
                    <fullName>Manager</fullName>
                </value>
                <value>
                    <fullName>Employee</fullName>
                </value>
                <value>
                    <fullName>Colleague</fullName>
                </value>
                <value>
                    <fullName>Company</fullName>
                </value>
                <value>
                    <fullName>Business partner</fullName>
                </value>
                <value>
                    <fullName>Friend</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ownership__c</fullName>
        <description>/* 
Created by: Amy Liang 
Used by: Vehicle Relationship
Function: Describe vehicle being private or company owned 
Used in: Pagelayouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/
Attribute in Data Dictionary object Vehicle Relationship is &quot;VehicleRel_Ownership&quot;</description>
        <inlineHelpText>Describe vehicle being private or company owned</inlineHelpText>
        <label>Ownership</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Private</fullName>
                </value>
                <value>
                    <fullName>Company</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Performance__c</fullName>
        <label>Performance</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Point_of_Purchase__c</fullName>
        <description>/* 
			Point of Purchase (Age)
		*/</description>
        <formula>IF(AND(ISNULL(Contact__r.PersonContact.Birthdate),ISNULL(Start_Date__c)),&apos;&apos;,TEXT(FLOOR((Start_Date__c-Contact__r.PersonContact.Birthdate +1)/365.2425)))</formula>
        <label>Point of Purchase (Age)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portal_Apply_Date__c</fullName>
        <label>Portal Apply Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Portal_Apply_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Portal Apply Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Portal_Apply_Status__c</fullName>
        <label>Portal Apply Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>To be Sent</fullName>
                </value>
                <value>
                    <fullName>Sent</fullName>
                </value>
                <value>
                    <fullName>Reject</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Portal_Apply_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Portal Apply User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Vehicle_Relationship5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Portal_Invisiblity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Portal Invisibility flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Portal_Visiblity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Portal visiblity flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pre_Owned_Warranty_Expiry__c</fullName>
        <label>Pre Owned Warranty Expiry</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Previous_Make__c</fullName>
        <label>Previous Make</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>AC</fullName>
                </value>
                <value>
                    <fullName>ALFA ROMEO</fullName>
                </value>
                <value>
                    <fullName>ASIA</fullName>
                </value>
                <value>
                    <fullName>ASTON MARTIN</fullName>
                </value>
                <value>
                    <fullName>AUDI</fullName>
                </value>
                <value>
                    <fullName>AUSTRAL DENNING</fullName>
                </value>
                <value>
                    <fullName>BENTLEY</fullName>
                </value>
                <value>
                    <fullName>BMW</fullName>
                </value>
                <value>
                    <fullName>CATERHAM</fullName>
                </value>
                <value>
                    <fullName>CATERPILLAR</fullName>
                </value>
                <value>
                    <fullName>CHERY</fullName>
                </value>
                <value>
                    <fullName>CHRYSLER</fullName>
                </value>
                <value>
                    <fullName>CITROEN</fullName>
                </value>
                <value>
                    <fullName>DAEWOO</fullName>
                </value>
                <value>
                    <fullName>DAF</fullName>
                </value>
                <value>
                    <fullName>DAIHATSU</fullName>
                </value>
                <value>
                    <fullName>Datsun</fullName>
                </value>
                <value>
                    <fullName>DENNIS EAGLE</fullName>
                </value>
                <value>
                    <fullName>DODGE</fullName>
                </value>
                <value>
                    <fullName>Eunos</fullName>
                </value>
                <value>
                    <fullName>FERRARI</fullName>
                </value>
                <value>
                    <fullName>FIAT</fullName>
                </value>
                <value>
                    <fullName>FORD</fullName>
                </value>
                <value>
                    <fullName>FOTON</fullName>
                </value>
                <value>
                    <fullName>FREIGHTLINER</fullName>
                </value>
                <value>
                    <fullName>GMC</fullName>
                </value>
                <value>
                    <fullName>GREAT WALL</fullName>
                </value>
                <value>
                    <fullName>HINO</fullName>
                </value>
                <value>
                    <fullName>HOLDEN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Previous_Model__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Previous Model</label>
        <referenceTo>Car_Model__c</referenceTo>
        <relationshipLabel>Vehicle Relationship (Previous Model)</relationshipLabel>
        <relationshipName>Vehicle_Relationship2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Previous_Year__c</fullName>
        <label>Previous Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>&lt;1980</fullName>
                </value>
                <value>
                    <fullName>1981</fullName>
                </value>
                <value>
                    <fullName>1982</fullName>
                </value>
                <value>
                    <fullName>1983</fullName>
                </value>
                <value>
                    <fullName>1984</fullName>
                </value>
                <value>
                    <fullName>1985</fullName>
                </value>
                <value>
                    <fullName>1986</fullName>
                </value>
                <value>
                    <fullName>1987</fullName>
                </value>
                <value>
                    <fullName>1988</fullName>
                </value>
                <value>
                    <fullName>1989</fullName>
                </value>
                <value>
                    <fullName>1990</fullName>
                </value>
                <value>
                    <fullName>1991</fullName>
                </value>
                <value>
                    <fullName>1992</fullName>
                </value>
                <value>
                    <fullName>1993</fullName>
                </value>
                <value>
                    <fullName>1994</fullName>
                </value>
                <value>
                    <fullName>1995</fullName>
                </value>
                <value>
                    <fullName>1996</fullName>
                </value>
                <value>
                    <fullName>1997</fullName>
                </value>
                <value>
                    <fullName>1998</fullName>
                </value>
                <value>
                    <fullName>1999</fullName>
                </value>
                <value>
                    <fullName>2000</fullName>
                </value>
                <value>
                    <fullName>2001</fullName>
                </value>
                <value>
                    <fullName>2002</fullName>
                </value>
                <value>
                    <fullName>2003</fullName>
                </value>
                <value>
                    <fullName>2004</fullName>
                </value>
                <value>
                    <fullName>2005</fullName>
                </value>
                <value>
                    <fullName>2006</fullName>
                </value>
                <value>
                    <fullName>2007</fullName>
                </value>
                <value>
                    <fullName>2008</fullName>
                </value>
                <value>
                    <fullName>2009</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <description>Survey Information
What factors were influential in your purchase decision?
(Please rank from 1-5, with 1 being most important and 5 less important)</description>
        <inlineHelpText>What factors were influential in your purchase decision?
(Please rank from 1-5, with 1 being most important and 5 less important)</inlineHelpText>
        <label>Price</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Purchase_Date__c</fullName>
        <description>/* 
Created by: Amy Liang 
Used by: Vehicle Relationship
Function: Purchase date of vehicle (information from leads, not from sales)
Used in: Pagelayouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/
Attribute in Data Dictionary object Vehicle Relationship is &quot;VehicleRel_PurchaseDate&quot;</description>
        <inlineHelpText>Purchase date of vehicle (information from leads, not from sales)</inlineHelpText>
        <label>Purchase Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Purchase_Intent__c</fullName>
        <label>Purchase Intent</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Family first car</fullName>
                </value>
                <value>
                    <fullName>Original car replacement (Non-Benz)</fullName>
                </value>
                <value>
                    <fullName>Original car replacement (Benz)</fullName>
                </value>
                <value>
                    <fullName>Replace existing vehicle</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>Refinance existing vehicle</fullName>
                </value>
                <value>
                    <fullName>Re-purchase</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Purchase_Price__c</fullName>
        <description>/* 
Created by: Amy Liang 
Used by: Vehicle Relationship
Function: Vehicle Relationship Purchase Price
Used in: Pagelayouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/
Attribute in Data Dictionary object Vehicle Relationship is &quot;VehicleRel_PurchasePrice&quot;</description>
        <label>Purchase Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Recall__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Recall</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RegistrationProvince__c</fullName>
        <description>/* 
Created by: Amy Liang 
Used by: Vehicle Relationship
Function: Province the vehicle was registered
Used in: Pagelayouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/
Attribute in Data Dictionary object Vehicle Relationship is &quot;VehicleRel_RegistrationProvince&quot;</description>
        <inlineHelpText>Province the vehicle was registered</inlineHelpText>
        <label>Registration Province</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Province1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Registration_City__c</fullName>
        <description>/* 
Created by: Amy Liang 
Used by: Vehicle Relationship
Function: City the vehicle was registered
Used in: Pagelayouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/
Attribute in Data Dictionary object Vehicle Relationship is &quot;VehicleRel_RegistrationCity&quot;</description>
        <inlineHelpText>City the vehicle was registered</inlineHelpText>
        <label>Registration City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registration_Date__c</fullName>
        <description>/* 
Created by: Amy Liang 
Used by: Vehicle Relationship
Function: Date of registration of current registration number
Used in: Pagelayouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/
Attribute in Data Dictionary object Vehicle Relationship is &quot;VehicleRel_RegistrationDate&quot;</description>
        <inlineHelpText>Date of registration of current registration number</inlineHelpText>
        <label>Registration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Registration_Number__c</fullName>
        <description>/* 
Created by: Amy Liang 
Used by: Vehicle Relationship
Function: Licence plate number of vehicle 
Used in: Pagelayouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/
Attribute in Data Dictionary object Vehicle Relationship is&quot; VehicleRel_RegistrationNumber&quot;</description>
        <externalId>true</externalId>
        <inlineHelpText>Licence plate number of vehicle</inlineHelpText>
        <label>Registration Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Replacement_Date__c</fullName>
        <label>Replacement Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Replacement__c</fullName>
        <defaultValue>false</defaultValue>
        <description>/* 
Created by: Amy Liang 
Used by: Vehicle Relationship
Function: Date of registration of current registration number
Used in: Pagelayouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/
Attribute in Data Dictionary object Vehicle Relationship is &quot;VehicleREl_Replacement&quot;</description>
        <inlineHelpText>Date of registration of current registration number</inlineHelpText>
        <label>Replacement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Retail_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Retail Contact</label>
        <referenceTo>Account_Link__c</referenceTo>
        <relationshipLabel>Vehicle Relationship</relationshipLabel>
        <relationshipName>Vehicle_Relationship</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Retail_CreatedDate__c</fullName>
        <label>Retail CreatedDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Retail_LastModifiedDate__c</fullName>
        <label>Retail LastModifiedDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SAP_Dealer_Code__c</fullName>
        <formula>Owner_Dealer__r.New_No_SAP_Vehicle_Cars__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SAP Dealer Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSI__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SSI process:  Lookup to the SSI record that was correctly matched to this vehicle relationship</description>
        <label>SSI Matched</label>
        <referenceTo>SSI__c</referenceTo>
        <relationshipLabel>Vehicle Relationship</relationshipLabel>
        <relationshipName>Vehicle_Relationship</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Safety__c</fullName>
        <description>Survey Information
What factors were influential in your purchase decision?
(Please rank from 1-5, with 1 being most important and 5 less important)</description>
        <inlineHelpText>What factors were influential in your purchase decision?
(Please rank from 1-5, with 1 being most important and 5 less important)</inlineHelpText>
        <label>Safety</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SalesType__c</fullName>
        <label>SalesType</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>H</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>L</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
                <value>
                    <fullName>R</fullName>
                </value>
                <value>
                    <fullName>S</fullName>
                </value>
                <value>
                    <fullName>T</fullName>
                </value>
                <value>
                    <fullName>U</fullName>
                </value>
                <value>
                    <fullName>V</fullName>
                </value>
                <value>
                    <fullName>W</fullName>
                </value>
                <value>
                    <fullName>X</fullName>
                </value>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>Z</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Consultant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Selling Res Person</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Vehicle_Relationship1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Person__c</fullName>
        <label>Sales Person</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Selling_Dealer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>/* 
Created by: Amy Liang 
Used by: Vehicle Relationship
Function: Name of the last dealer who sold the vehicle
Used in: Pagelayouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/
Attribute in Data Dictionary object Vehicle Relationship is &quot;VehicleRel_ProvidedDealer&quot;</description>
        <inlineHelpText>Name of the last dealer who sold the vehicle</inlineHelpText>
        <label>Selling Dealer</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <errorMessage>Please select the proper dealer account.</errorMessage>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Dealer</value>
            </filterItems>
            <filterItems>
                <field>$Profile.Name</field>
                <operation>equals</operation>
                <value>IntegrationAPI</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Vehicle Relationships(Vehicle Relationship Selling Dealer)</relationshipLabel>
        <relationshipName>Vehicle_Relationships_Selling_Dealer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Advisor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Res Person</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Vehicle_Relationship2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Source_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>To keep relationship as source Lead of this vehicle relationship, this is only sent on Purchaser.</description>
        <label>Source Lead</label>
        <referenceTo>Lead__c</referenceTo>
        <relationshipLabel>Vehicle Relationship</relationshipLabel>
        <relationshipName>Vehicle_Relationship</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Starmarque__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Starmarque</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>/* 
Created by: Amy Liang 
Used by: Vehicle Relationship
Function: Relationship start date
Used in: Pagelayouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/
Attribute in Data Dictionary object Vehicle Relationship is &quot;VehicleRel_StartDate&quot;</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>/* 
Created by: Amy Liang 
Used by: Vehicle Relationship
Function: Status of vehicle for this person
Used in: Pagelayouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/
Attribute in Data Dictionary object Vehicle Relationship is &quot;VehicleRel_Status&quot;</description>
        <inlineHelpText>Status of vehicle for this person</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Previously Owned</fullName>
                </value>
                <value>
                    <fullName>Currently Owned</fullName>
                </value>
                <value>
                    <fullName>Prospect</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>System_Data_Source__c</fullName>
        <description>/*
Created by: Lio Huang
Used by: Lio Huang
Function: This field will not be in any page layout, read only for all profile as it is updated by integration.
Used in: Integration

Modify History
Modify By:
Modify Reason:
*/</description>
        <label>System Data Source</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TSP_MDN__c</fullName>
        <formula>Vehicle_ID__r.TSP_MDN__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TSP MDN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TV__c</fullName>
        <description>What factors were influential in your purchase decision?
(Please rank from 1-5, with 1 being most important and 5 less important)</description>
        <inlineHelpText>What factors were influential in your purchase decision?
(Please rank from 1-5, with 1 being most important and 5 less important)</inlineHelpText>
        <label>TV</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Technology__c</fullName>
        <description>Survey Infromation
What factors were influential in your purchase decision?
(Please rank from 1-5, with 1 being most important and 5 less important)</description>
        <inlineHelpText>What factors were influential in your purchase decision?
(Please rank from 1-5, with 1 being most important and 5 less important)</inlineHelpText>
        <label>Technology</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>